Fix code block wrapping for headers

--- a/src/scss/next.scss
+++ b/src/scss/next.scss
@@ -395,7 +395,7 @@ h6 code,
   margin: 0;
   padding: 0;
   white-space: normal;
-  word-break: break-all;
+  overflow-wrap: break-word
 }
 
 p code,
